[tool.poetry]
name = "report-hub"
version = "0.1.0"
description = "ReportHub by IMMAP"
authors = ["RH-Team <rh-support@immap.org>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
Django = "^5.0.6"
sqlparse = "0.4.2"
typing_extensions = "4.7.0"
django-filter = "24.2"
django-environ = "0.10.0"
pandas = "2.2.3"
bcrypt = "4.0.1"
openpyxl = "3.1.2"
djangorestframework = "3.13.1"
# generate model data in tests
model-bakery = "1.7.0"
pytz = "2022.1"
sentry-sdk = {extras = ["django"], version = "^1.39.1"}
django-htmx = "^1.17.2"
psycopg2-binary = "^2.9.9"
django-dbbackup = "^4.1.0"
dropbox = "^12.0.0"
django-storages = "^1.14.3"
django-extra-settings = "^0.12.0"
django-mdeditor = "^0.1.20"
markdown = "^3.6"
django-mailer = "^2.3.2"
gunicorn = "^23.0.0"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
nplusone = "^1.0.0"
django-tui = "^23.9"
django-debug-toolbar = "^4.2.0"
numpy = "2.2.0"
ruff = "^0.8.3"
Faker = "14.2.1"
factory-boy = "^3.3.0"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
line-length=120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "scripts",
    "migrations"
]


[tool.djlint]
profile="django"
blank_line_before_tag="load,extends,block"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
